# factorion-bot

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  FACTORION_FEATURE_IMPLEMENTATION.md  FACTORION_VERIFICATION.md  LICENSE  MATH.md  README.md  default.nix  docker-compose.yml  en.json  factorion_demo.rs  flake.nix  manual_verification.txt  readme.md  run.sh  verify_factorions.rs
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: build.yml  build_and_test.yml  deploy.yml  machete.yml  test.yml  test_and_deploy.yml  test_on_push.yml
factorion-bot-discord/: .env.example  Cargo.toml  PRIVACY.md  README.md  TERMS.md
factorion-bot-discord/src/: discord_api.rs  influxdb.rs  main.rs
factorion-bot-lemmy/: Cargo.toml
factorion-bot-lemmy/src/: main.rs
factorion-bot-reddit/: Cargo.toml  README.md  subreddits.json
factorion-bot-reddit/src/: influxdb.rs  main.rs  reddit_api.rs
factorion-cli/: Cargo.toml
factorion-cli/src/: main.rs
factorion-lib/: Cargo.toml  Locales.md  README.md
factorion-lib/src/: calculation_results.rs  calculation_tasks.rs  comment.rs  de.json  en.json  en_fuck.json  format.rs  fr.json  influxdb.rs  it.json  lib.rs  locale.rs  nl.json  parse.rs  ru.json
factorion-lib/tests/: integration.rs
factorion-math/: Cargo.toml  README.md
factorion-math/src/: lib.rs
factorion-reddit/: Cargo.toml
factorion-reddit/src/: main.rs  reddit_api.rs
src/: calculated.rs  calculation_results.rs  calculation_tasks.rs  factorial.rs  influxdb.rs  main.rs  math.rs  parse.rs  pending.rs  reddit_api.rs  reddit_comment.rs
src/reddit_api/: comment.rs
