[package]
name = "factorion-bot"
version = "2.5.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = { version = "0.14.0", default-features = false }
reqwest = { version = "0.12.15", features = ["json", "native-tls"], default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
num-traits = { version = "0.2.19", default-features = false }
base64 = { version = "0.22.1", default-features = false }
dotenvy = "^0.15.7"
time = "0.3.39"
chrono = { version = "0.4.40", features = ["now"], default-features = false }
anyhow = { version = "1.0.97", default-features = false }
http = { version = "1.3.1", default-features = false }
influxdb = { version = "0.7.2", features = ["derive", "reqwest"], default-features = true }
once_cell = { version = "1.21.1", default-features = false }
rug = { version = "1.27.0", features = ["integer", "float"], default-features = false }
futures = { version = "0.3.31", default-features = false }
