[package]
name = "factorion-bot-discord"
version = "2.1.12"
edition = "2024"
description = "factorion-bot (for factorials and related) on Discord"
license = "MIT"
repository = "https://github.com/tolik518/factorion-bot/"
readme = "README.md"
keywords = ["factorial", "termial", "bot", "math", "discord"]
categories = ["mathematics", "web-programming", "parser-implementations"]

[dependencies]
factorion-lib = { path = "../factorion-lib", version = "4.1.11", features = ["serde", "influxdb"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
dotenvy = "^0.15.7"
log = "0.4.28"
env_logger = "0.11.8"
anyhow = { version = "1.0.100", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
