[package]
name = "factorion-bot-lemmy"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.11"
factorion-lib = {path = "../factorion-lib", version = "7.0.0", features = ["serde", "influxdb"]}
lemmy-client = "0.19.18"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
anyhow = { version = "1.0.100", default-features = false }
log = { version = "0.4.29" }
