[package]
name = "factorion-bot-reddit"
version = "4.0.1"
edition = "2024"
description = "factorion-bot (for factorials and related) on Reddit"
license = "MIT"
repository = "https://github.com/tolik518/factorion-bot/"
readme = "../README.md"
keywords = ["factorial", "termial", "bot", "math"]
categories = ["mathematics", "web-programming", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
factorion-lib = {path = "../factorion-lib", version = "1.0"}
reqwest = { version = "0.12.22", features = ["json", "native-tls"], default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
base64 = { version = "0.22.1", default-features = false }
dotenvy = "^0.15.7"
chrono = { version = "0.4.41", features = ["now"], default-features = false }
anyhow = { version = "1.0.97", default-features = false }
http = { version = "1.3.1", default-features = false }
influxdb = { version = "0.7.2", features = ["derive", "reqwest"], default-features = true }
futures = { version = "0.3.31", default-features = false }
log = { version = "0.4.27" }
env_logger = { version = "0.11.8"}

