[package]
name = "factorion-bot-reddit"
version = "5.0.7"
edition = "2024"
description = "factorion-bot (for factorials and related) on Reddit"
license = "MIT"
repository = "https://github.com/tolik518/factorion-bot/"
readme = "../README.md"
keywords = ["factorial", "termial", "bot", "math"]
categories = ["mathematics", "web-programming", "parser-implementations"]

[dependencies]
factorion-lib = {path = "../factorion-lib", version = "3.0.0", features = ["serde", "influxdb"]}
reqwest = { version = "0.12.24", features = ["json", "native-tls"], default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = "1.0.140"
postcard = {version = "1.1.3", features = ["use-std"]}
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
base64 = { version = "0.22.1", default-features = false }
dotenvy = "^0.15.7"
chrono = { version = "0.4.42", features = ["now"], default-features = false }
anyhow = { version = "1.0.100", default-features = false }
http = { version = "1.3.1", default-features = false }
futures = { version = "0.3.31", default-features = false }
log = { version = "0.4.27" }
env_logger = { version = "0.11.8"}
