[package]
name = "factorion-cli"
version = "1.0.0"
edition = "2024"
description = "Basic CLI implementation of factorion"
license = "MIT"
repository = "https://github.com/tolik518/factorion-bot/"
readme = "../README.md"
keywords = ["factorial", "termial", "bot", "math"]
categories = ["mathematics"]

[dependencies]
factorion-lib = {path = "../factorion-lib", version = "4.0.1", features = ["serde", "influxdb"]}
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
dotenvy = "^0.15.7"
log = { version = "0.4.29" }
env_logger = { version = "0.11.8"}
