[package]
name = "factorion-lib"
version = "4.1.0"
edition = "2024"
description = "A library used to create bots to recognize and calculate factorials and related concepts"
license = "MIT"
repository = "https://github.com/tolik518/factorion-bot/"
readme = "README.md"
keywords = ["factorial", "termial", "bot", "math"]
categories = ["mathematics", "web-programming", "parser-implementations"]

[dependencies]
factorion-math = {path = "../factorion-math", version = "1.0"}
serde = {version = "1.0", features = ["derive"], optional = true}
serde_json = {version = "1.0", optional = true}
concat-idents = "1.1.4"
influxdb = {version = "0.7.2", features = ["derive", "reqwest"], default-features = true, optional = true}
chrono = {version = "0.4.41", features = ["now"], default-features = false, optional = true}

[dev-dependencies]
arbtest = "0.3.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}

[features]
serde = ["dep:serde", "dep:serde_json", "factorion-math/serde"]
influxdb = ["dep:influxdb", "dep:chrono"]
