[package]
name = "factorion-math"
version = "1.0.0"
edition = "2024"
description = "The math (factorials and related functions) used by factorion"
license = "MIT"
repository = "https://github.com/tolik518/factorion-bot/"
readme = "README.md"
keywords = ["factorial", "termial", "math"]
categories = ["mathematics"]

[dependencies]
rug = { version = "1.27.0", features = ["integer", "float"], default-features = false }
gmp-mpfr-sys = "=1.6.4"
